# SO2

./: .gitignore  README.md
chat_app/: CMakeLists.txt  client_main.cpp  server_main.cpp
dining_philosophers/: CMakeLists.txt  main.cpp
dining_philosophers/include/: Chopstick.h  DiningPhilosophers.h  DiningPhilosophersVisualizer.h  Philosopher.h  PhilosopherStatus.h  chopstick.h  philosopher.h
dining_philosophers/src/: Chopstick.cpp  DiningPhilosophers.cpp  DiningPhilosophersVisualizer.cpp  Philosopher.cpp  chopstick.cpp  chopstick.h  main.cpp  philosopher.cpp  philosopher.h
